# cbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cbox.c  main.c  main.h  setup.py
core/: filter.c  filter.h  helper.c  helper.h  syscall-names.h  syscall.c  utils.c  utils.h
core2/: box.c  box.h  main.c  rules.c  rules.h  syscall.h  wcommon.c  wcommon.h  wrap_tracee.c  wrap_tracee.h  wrap_tracer.c  wrap_tracer.h
dev/aplusb/: a  a.cpp
dev/bak/: bpf-c.out.bak  resolve_bpf_out.py  syscall_filter.c  syscall_reporter.c
dev/course/: main  main.c
dev/sample/: config.status  configure  example  seccomp-bpf.h  syscall-reporter.c  syscall-reporter.h
dev/sample/autom4te.cache/: output.0  requests  traces.0
tests/: a  a.cpp  a2  test.c  test.h
tests/aplusb/: Main.java  a  a.cpp  a.py3  test
